--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     <main>
         <div class="container d-flex flex-column align-items-center">
-            <img width="100%" height="250px" class="mt-5" src="/random song generator logo (1).png">
+            <img width="100%" height="250px" class="mt-5" src="/Artist-Generator/random song generator logo (1).png">
             <div class="row g-5 justify-content-evenly">
                 <div class="col-lg-8">
                     <div class="card shadow-lg mb-3">
                         <div class="row g-0">
                             <div id="image" class="col-6 col-md-5">
-                                <img src="/starting image (1).png" class="card-img img-fluid rounded-start shadow-sm" alt="Find Your Song">
+                                <img src="/Artist-Generator/starting image (1).png" class="card-img img-fluid rounded-start shadow-sm" alt="Find Your Song">
                             </div>
                             <div class="col-6 col-md-7" height="100%">
                                 <div class="card-body d-flex flex-column justify-content-between align-items-center text-center" style="height: 100%">
@@ -41,7 +41,7 @@
                                             <p class="card-text text-decoration-underline mb-0">Listen on Youtube:</p>
                                             <div class="col-3 d-flex justify-content-center">
                                                 <a id="yt" href="https://www.youtube.com/" target="_blank">
-                                                    <img src="/youtube logo.png" class="listen-logo" alt="youtube">
+                                                    <img src="/Artist-Generator/youtube logo.png" class="listen-logo" alt="youtube">
                                                 </a>
                                             </div>
                                         </div>
@@ -66,6 +66,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    <script src="/script.js"></script>
+    <script src="/Artist-Generator/script.js"></script>
 </body>
 </html>
