--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                         </div>
                                     </div>
                                     <div class="justify-content-center align-items-end">
-                                        <button id="btn" class="btn btn-lg btn-dark">Find Song</button>
+                                        <button id="find" class="btn btn-lg btn-dark">Find Song</button>
                                     </div>
                                 </div>
                             </div>
